# Bazel-KSP-code-generation-bug

./: .bazelrc  .editorconfig  .gitignore  BUILD  MODULE.bazel  README.md  maven_install.json
src/main/kotlin/ksp_bug/annotation/: CustomAnnotation.kt
src/main/kotlin/ksp_bug/app/: Main.kt
src/main/kotlin/ksp_bug/processor/: CustomProcessor.kt
