"""
This module file manages external dependencies using Bzlmod.
"""

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "ksp_bug")

bazel_dep(
    name = "rules_java",
    version = "7.11.1",
)
bazel_dep(
    name = "contrib_rules_jvm",
    version = "0.27.0",
)
bazel_dep(
    name = "rules_kotlin",
    version = "2.0.0",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.4",
)

register_toolchains("//:ktools")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.squareup:kotlinpoet-jvm:2.0.0",
        "com.squareup:kotlinpoet-ksp:2.0.0",
        "com.google.devtools.ksp:symbol-processing:2.0.20-1.0.25",
        "dev.zacsweers.autoservice:auto-service-ksp:1.2.0",
        "com.google.auto.service:auto-service-annotations:1.1.1",
        "org.jetbrains.kotlin:kotlin-reflect:2.0.20",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

